5章で使うサンプルコードを格納

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -8,6 +8,19 @@
 <body>
   <h1>Express</h1>
   <p>Welcome to Express</p>
+  ※最後にログインしたOIDC認証のみが有効となる（上書きする）実装とした。<br>
+  <br>
+  <a href="./auth-gcp/login" target="_blank">Google OIDC認証</a><br>
+  <a href="./auth-gcp/" target="_blank">Google OIDC認証が必要なパス配下へのリンク</a><br>
+  <br>
+  <br>
+  <a href="./auth-azure/login" target="_blank">Azure OIDC認証</a><br>
+  <a href="./auth-azure/" target="_blank">Azure OIDC認証が必要なパス配下へのリンク</a><br>
+  <br>
+  <br>
+  <a href="./auth-yahoo/login" target="_blank">Yahoo OIDC認証</a><br>
+  <a href="./auth-yahoo/" target="_blank">Yahoo OIDC認証が必要なパス配下へのリンク</a><br>
+  <br>
 </body>
 
 </html>
